<resources>

    <string name="app_name">JSON Test</string>

    <!--Activity Titles-->
    <string name="title_activity_settings">Settings</string>

    <!--Menu Strings-->
    <string name="action_sort_default">Sort by Default Order</string>
    <string name="action_sort_location">Sort by Location</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>

    <!--Shared Prefs -->
    <string name="pref_key_language" translatable="false">language</string>
    <string name="pref_language_label" translatable="false">Language</string>

    <string name="pref_language_label_english">English</string>
    <string name="pref_language_label_chinese">Chinese</string>
    <string name="pref_language_label_pinyin">Pinyin</string>

    <string name="pref_language_english" translatable="false">english</string>
    <string name="pref_language_chinese" translatable="false">chinese</string>
    <string name="pref_language_pinyin" translatable="false">pinyin</string>

    <!--Text Views-->
    <string name="text_view_station_detail_spaces_available">Spaces Available</string>
    <string name="text_view_station_detail_bikes_available">Bikes Available</string>
    <string name="text_view_station_detail_distance">Distance</string>
    <string name="text_view_station_detail_no_data">No Data</string>
    <string name="text_view_station_list_time_label">Last update:</string>

    <!--Empty View Strings-->
    <string name="text_view_station_detail_empty">No Data Available</string>

    <!--A11y Strings-->
    <string name="a11y_status_icon">Status Icon</string>
    <string name="a11y_button_map">View On Map Button</string>
    <string name="a11y_button_favorite">Favorite Button</string>

    <!--Transition Strings-->
    <string name="transition_status_image_view" translatable="false">status_image</string>
    <string name="transition_station_name_text" translatable="false">station_name</string>

    <!--Share Intent Strings-->
    <string name="shareTextOne">There are</string>
    <string name="shareTextTwo">bikes available and</string>
    <string name="shareTextThree">spaces available at</string>
    <string name="shareTextFour">station as of</string>

    <!--Map Strings-->
    <string name="snippet_string_bikes">Bikes:</string>
    <string name="snippet_string_spaces">Spaces:</string>
    <string name="title_activity_maps">Map</string>
</resources>
