<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_default"
        android:orderInCategory="101"
        android:title="@string/action_sort_default"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_proximity"
        android:orderInCategory="102"
        android:title="@string/action_sort_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>