<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/station_detail_container"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>

    <LinearLayout
        android:id="@+id/linear_layout_station_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:theme="@style/Theme.DetailTitle"
        android:background="@android:color/white">


        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <TextView
            android:id="@+id/text_view_station_detail_station_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:gravity="center_horizontal"
            android:textSize="@dimen/station_detail_station_text_size"
            android:transitionName="@string/transition_station_name_text"
            tools:text="station name" />


        <ImageView
            android:id="@+id/image_view_station_detail_status"
            android:layout_width="@dimen/status_icon"
            android:layout_height="@dimen/status_icon"
            android:layout_gravity="center_horizontal"
            android:adjustViewBounds="true"
            android:transitionName="@string/transition_status_image_view"
            android:contentDescription="@string/a11y_status_icon"/>

        <TextView
            android:id="@+id/text_view_station_detail_district"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"
            android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"
            android:gravity="center_horizontal"
            android:textSize="@dimen/station_detail_district_text_size"
            tools:text="station district" />


        <android.support.v7.widget.Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_station_body"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="0dp"
        android:layout_weight="2">

        <android.support.v4.widget.Space
            android:id="@+id/grid_space_left"
            android:visibility="gone"
            android:layout_width="@dimen/grid_space_size"
            android:layout_height="match_parent" />


        <android.support.v7.widget.GridLayout
            android:id="@+id/detail_additional_pane"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:paddingEnd="@dimen/detail_station_horizontal_padding"
            android:paddingLeft="@dimen/detail_station_horizontal_padding"
            android:paddingRight="@dimen/detail_station_horizontal_padding"
            android:paddingStart="@dimen/detail_station_horizontal_padding"
            android:paddingTop="@dimen/abc_list_item_padding_horizontal_material"
            android:paddingBottom="@dimen/abc_list_item_padding_horizontal_material"
            app:columnCount="2">


            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/text_view_station_detail_distance"
                android:textSize="@dimen/station_detail_details_text_size"
                android:textColor="@color/secondary_text_light_bg"
                app:layout_columnWeight="1"
                app:layout_gravity="fill"
                app:layout_rowWeight="1"/>

            <TextView
                android:id="@+id/text_view_station_detail_distance"
                android:gravity="center_vertical|end"
                android:textSize="@dimen/station_detail_details_text_size"
                android:textColor="@color/colorAccent"
                app:layout_gravity="fill"
                tools:text="4.4km" />


            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/text_view_station_detail_bikes_available"
                android:textSize="@dimen/station_detail_details_text_size"
                android:textColor="@color/secondary_text_light_bg"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/text_view_station_detail_bikes"
                android:gravity="center_vertical|end"
                android:textSize="@dimen/station_detail_details_text_size"
                android:textColor="@color/colorAccent"
                app:layout_gravity="fill"
                tools:text="124" />


            <TextView
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/text_view_station_detail_spaces_available"
                android:textSize="@dimen/station_detail_details_text_size"
                android:textColor="@color/secondary_text_light_bg"
                app:layout_gravity="fill"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/text_view_station_detail_spaces"
                android:gravity="center_vertical|end"
                android:textSize="@dimen/station_detail_details_text_size"
                android:textColor="@color/colorAccent"
                app:layout_gravity="fill"
                tools:text="13" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                app:layout_columnSpan="2">

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/button_station_detail_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_favorite_outline_grey600_48dp"
                    android:contentDescription="@string/a11y_button_favorite"/>

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/button_station_detail_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:gravity="center_horizontal"
                    android:src="@drawable/ic_map_black_48dp"
                    android:contentDescription="@string/a11y_button_map"/>

                <android.support.v4.widget.Space
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </android.support.v7.widget.GridLayout>
        <android.support.v4.widget.Space
            android:id="@+id/grid_space_right"
            android:visibility="gone"
            android:layout_width="@dimen/grid_space_size"
            android:layout_height="match_parent" />

    </LinearLayout>
    <TextView
        android:id="@+id/text_view_station_detail_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/text_view_station_detail_empty"
        android:visibility="gone" />
</LinearLayout>